fixed squashed profile image

--- a/style.css
+++ b/style.css
@@ -66,6 +66,8 @@ body {
   width: 200px;
   height: 200px;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.15);
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .profile-name {
